# openclaw-rokid-glasses

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.spec/specs/rokid-glasses-bridge/: design.md  requirements.md  spec.json  tasks.md
.spec/steering/: product.md  structure.md  tech.md
scripts/: smoke-test.sh
src/rokid_bridge/: app.py  config.py  history.py  image_handler.py  models.py  relay.py  rokid_auth.py
tests/integration/: test_endpoints.py
tests/unit/: test_config.py  test_history.py  test_image_handler.py  test_models.py  test_rate_limiter.py  test_relay.py  test_rokid_auth.py
