[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rokid-bridge"
version = "0.1.0"
description = "Rokid Glasses SSE Bridge — OpenClaw Secure Stack Extension"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.28",
    "pydantic-settings>=2.6",
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest-cov>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rokid_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["tests/"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
